# patrick

./: .gitattributes  README.md  README.rst  call_dicodile.py  extract_frames.ipynb  hdf5.py  load_dict.py  poc.ipynb  pyproject.toml
.github/workflows/: codecov.yaml  pytest.yaml
assets/input/blob_i/: density_movie.json
examples/: model_inference.ipynb
patrick/: __init__.py  bayesian_sweep_config.yaml  box_detection.py  call_dicodile.py  data_module.py  dataset.py  display.py  efficientdet.py  hdf5.py  import_annotations.py  inference.py  load_and_save.py  minimal_pytorch_trainer.py  parse.py  plot.py  poc.ipynb  prepare_images_for_annotation.ipynb  sort.py  sweep_config.yaml.yaml  training_loop.py
patrick/adapters/: nn_model.py  torch.py
patrick/cd_training/: base.py  numpy.py  torch.py
patrick/cnn/: factory.py  faster_rcnn.py
patrick/core/: __init__.py  operations.py  value_objects.py
patrick/core/entities/: annotation.py  detection.py  frame.py  metadata.py  movie.py  training.py
patrick/core/interfaces/: cnn.py
patrick/data/: annotation.py  data_handler.py  image.py  operations.py  tfrecord.py
patrick/datasets/: torch.py
patrick/detection_utils/: coco_eval.py  coco_utils.py  engine.py  transforms.py
patrick/efficientdet/: dataloader.py
patrick/efficientdet/dataset/: inspect_tfrecords.py
patrick/efficientdet/tf2/: anchors.py
patrick/entities/: annotation.py  detection.py  frame.py  metadata.py  movie.py  tracking.py
patrick/interfaces/: __init__.py  builder.py  cnn.py  model.py  repository.py
patrick/nn_models/: __init__.py
patrick/nn_training/: eval.py  nn_trainer.py  torch.py  train.py
patrick/repositories/: factory.py  local.py  osf.py
patrick/scripts/: call_dicodile.py  efficientdet_commands.md  import_cvat_annotations.py  make_tfrecords.py  model_inference.py  train_efficientdet_pytorch.py
patrick/storage/: __init__.py  cvat.py  dicodile.py  model.py
patrick/storage_old/: cvat.py  dicodile.py
patrick/sweep_configs/: bayesian_sweep_config.yaml
patrick/training/: eval.py  torch.py  train.py
patrick/use_cases/: detect_structures.py  track_structures.py
pattern_detection_tokam/: call_dicodile.py  grid_search_dicodile.py  load_and_save.py
tests/cnn/: test_faster_rcnn.py
tests/core/: test_value_objects.py
tests/entities/: test_annotation.py  test_frame.py
tests/repositories/: test_local.py
(+12 files in other folders)
