[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patrick"
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Mansour Benbakoura", email = "mansour.benbakoura@inria.fr"}
]
description = "Pattern discovery on TOKAM2D movies"
readme = "README.md"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN201", "COM812", "D100", "D103", "T201"]

[tool.ruff]
line-length = 88