[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patrick"
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Mansour Benbakoura", email = "mansour.benbakoura@inria.fr"}
]
description = "Pattern discovery on TOKAM2D movies"
readme = "README.md"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN204", "COM812", "D100", "D103", "D105", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "FLY002", "INP001", "PLR2004", "S101"]
