[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patrick"
version = "0.1.0"
dependencies = [
  "numpy<2",
  "pytest",
  "pytest-cov",
  "PyYAML",
  "ruff",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
]
requires-python = ">=3.8"
authors = [
  {name = "Mansour Benbakoura", email = "mansour.benbakoura@inria.fr"}
]
description = "Pattern Discovery Kit"
readme = "README.md"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"